--- a/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
@@ -2,28 +2,7 @@
 title: "Maanfasen en zonsverduistering"
 date: 2019-01-28T18:38:31+01:00
 weight: 5
-draft: false
 tags: []
-categories: []
-level: ""
-course: ""
-topic: ""
-images:
-    [
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/zonsverduistering.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/total_eclipse.jpg",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/partial_eclipse.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/annular_eclipse.jpg",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/maanfasen_vanop_aarde.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/maanfasen_zijaanzicht.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/maanfasen_bovenaanzicht.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/ecliptisch_vlak.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/lunar_node_eclipses.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/maansverduistering.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/aarde_maan_op_schaal.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/op_schaal.png",
-        "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/op_schaal_enkel_groottes.png",
-    ]
 image: img/zonsverduistering.png
 ---
 
@@ -34,7 +13,7 @@ maanfasen en maansverduistering bespreken.
 
 ## Zonsverduistering
 
-De zon is een [diffuse lichtbron](lichtstralen#puntvormige-en-diffuse-lichtbronnen).
+De zon is een [diffuse lichtbron](lichtbronnen#puntvormige-en-diffuse-lichtbronnen).
 Hierdoor zal een belicht voorwerp een
 [bijschaduw en soms een kernschaduw](schaduwvorming#diffuse-lichtbron-zachte-schaduw)
 hebben. Een voorbeeld hiervan is een **totale zonsverduistering**. Daarbij
