--- a/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
@@ -2,16 +2,6 @@
 title: "Krachten op een voorwerp tekenen"
 date: 2019-05-24T11:04:17+02:00
 weight: 6
-draft: false
-images:
-    [
-        "/lessen/fysica/krachten_1/kracht_op_voorwerp/img/schaatsbaan_setup.png",
-        "/lessen/fysica/krachten_1/kracht_op_voorwerp/img/krachten_maria.png",
-        "/lessen/fysica/krachten_1/kracht_op_voorwerp/img/krachten_dirk.png",
-        "/lessen/fysica/krachten_1/kracht_op_voorwerp/img/in_massapunt.png",
-        "/lessen/fysica/krachten_1/kracht_op_voorwerp/img/samenvatting_krachten_op.png",
-        "/lessen/fysica/krachten_1/kracht_op_voorwerp/img/samenvatting_in_massapunt.png",
-    ]
 image: img/schaatsbaan_setup.png
 ---
 
@@ -37,7 +27,7 @@ De krachten op Maria zijn:
 -   de kracht van Dirk op Maria $\red{\vec{F}_{DM}}$,
 -   [de zwaartekracht](zwaartekracht) $\red{\vec{F}_{zM}}$ die de aarde uitoefent
     op Maria,
--   [de normaalkracht](normaalkracht) $\red{\vec{F}_{nM}}$ die de schaatsbaan
+-   [de normaalkracht](normaalkracht_en_gewicht) $\red{\vec{F}_{nM}}$ die de schaatsbaan
     uitoefent op Maria.
 
 ![](img/krachten_maria.png)
