--- a/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
@@ -33,7 +33,7 @@ krachten die inwerken op de droppende Maria:
 
 1. [de zwaartekracht](zwaartekracht) $\red{\vec{F}_{zM}}$ die de aarde uitoefent
    op Maria,
-2. [een normaalkracht](normaalkracht) $\red{\vec{F}_{nM}}$ op Maria, veroorzaakt door
+2. [een normaalkracht](normaalkracht_en_gewicht) $\red{\vec{F}_{nM}}$ op Maria, veroorzaakt door
    het steunen op het skateboard.
 
 We tekenen de krachten samen in [een
