--- a/src/content/lessen/fysica/beweging/_index.mdx
+++ b/src/content/lessen/fysica/beweging/_index.mdx
@@ -2,13 +2,9 @@
 title: "Bewegingen"
 date: 2020-09-19T07:56:38+01:00
 weight: 4
-draft: false
-section_color: "#19a974"
 tags: []
-categories: []
 level: "6e middelbaar"
 course: "fysica"
 topic: "kinematica"
-images: []
+image: beweging/img/beweging_rust.png
 ---
-
