--- a/src/content/lessen/fysica/beweging/intro/index.mdx
+++ b/src/content/lessen/fysica/beweging/intro/index.mdx
@@ -5,7 +5,7 @@ weight: 1
 draft: true
 tags: ["beweging", "rust", "referentie", "snelheid", "dynamica", "kinematica"]
 description: "Wanneer ben je in beweging en wanneer ben je in rust? Welk referentiepunt gebruiken we wanneer we spreken over beweging? Deze les bekijkt de aspecten beweging, rust en referentie op een visuele manier."
-images: ['lessen/fysica/beweging/intro/img/beweging_rust.png']
+image: ./img/beweging_rust.png
 ---
 We zijn allemaal in **beweging**. Niet alleen wanneer je fiets of loopt ben je in beweging, maar zelfs wanneer je lui op een stoel zit, beweeg je.
 
