--- a/src/content/lessen/fysica/beweging/soorten_bewegingen/index.mdx
+++ b/src/content/lessen/fysica/beweging/soorten_bewegingen/index.mdx
@@ -5,7 +5,7 @@ weight: 3
 draft: true
 tags: ["beweging", "soorten bewegingen", "eenparige", "rechtlijninge", "cirkelvormige", "translatie", "rotatie", "dynamica", "kinematica"]
 description: "Een voorwerp kan bewegen op verschillende manieren. We bekijken het verschil tussen rotatie en translatie, waarna we ook de verschillende vormen van translatie bekijken."
-images: ['content/lessen/fysica/beweging/soorten_beweging/img/translatie_rotatie.png']
+image: ./img/translatie_rotatie.png
 ---
 Om het concept *beweging* verder in te delen, maken we onderscheid tussen enkele **soorten bewegingen**. 👇
 
