--- a/src/content/lessen/fysica/beweging/verplaatsing/index.mdx
+++ b/src/content/lessen/fysica/beweging/verplaatsing/index.mdx
@@ -5,7 +5,7 @@ weight: 2
 draft: true
 tags: ["baan", "afgelegde weg", "verplaatsing", "beweging", "dynamica", "kinematica"]
 description: "Deze les gaat over drie begrippen: baan, afgelegde weg en verplaatsingen. Ze betekenen alle drie net iets anders en mogen niet verward worden."
-images: ['content/lessen/fysica/beweging/verplaatsing/img/inleiding.png', 'content/lessen/fysica/beweging/verplaatsing/img/baan.png']
+image: ./img/baan.png
 ---
 Maria en Dirk willen dit weekend van Brussel naar Gent (57 km) rijden en vervolgens overnachten in Aalst, wat eigenlijk 29 km in de tegengestelde richting is. 
 
