Check rekenen_rationaal

--- a/src/content/lessen/wiskunde/rekenen_rationaal/_index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/_index.mdx
@@ -2,13 +2,10 @@
 title: "Rekenen met rationale getallen"
 date: 2019-01-06T11:05:48+01:00
 weight: 1
-draft: false
 tags: []
-categories: []
 level: "1e middelbaar"
-section_color: "#00449e"
 course: ""
 topic: "algebra"
-images: []
+image: breuken/img/pizza.png
 ---
 
