--- a/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
@@ -3,9 +3,9 @@ title: "Wat is een breuk?"
 date: 2020-07-05T15:00:00+02:00
 weight: 2
 draft: false
-images: []
 tags: ["Breuk", "Rationale getallen", "Bewerkingen", "Waarom kan je niet delen door 0?"]
 description: "In deze les zoeken we uit wat een breuk precies is."
+image: ./img/pizza.png
 ---
 Je bent op een feestje met acht personen en het is tijd voor de taart. 🎂 Iedereen wil uiteraard een even groot
 stuk van de taart, dus wordt hij in acht gelijke stukken gesneden. 🍰 Iedereen krijgt dus één achtste of $\frac{1}{8}$ van de taart.
