--- a/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
@@ -4,6 +4,7 @@ date: 2020-06-20T12:00:00+02:00
 weight: 5
 tags: ["Machten", "Rekenen", "Bewerkingen", "Breuken", "Kommagetallen", "Rationale getallen"]
 description: "In deze les herhalen we wat een macht precies is en leren we de macht te nemen van breuken en kommagetallen."
+image: ./img/terminologie.png
 ---
 Wij mensen hebben graag dat alles kort en netjes genoteerd wordt. 🖋️ Ook in
 de wiskunde proberen we alles zo kort mogelijk te noteren. Zo leerde je vroeger al
