--- a/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
@@ -2,11 +2,10 @@
 title: "Optellen en aftrekken van breuken en kommagetallen"
 date: 2020-07-05T15:00:00+02:00
 weight: 3
-draft: false
-images: []
 tags: ["Breuk", "Kommagetallen", "Optellen", "Aftrekken", "Rationale getallen", "Bewerkingen"]
 description: "In deze les leren we hoe we rationale getallen kunnen optellen en
 aftrekken."
+image: ./img/teller_noemer_optellen.png
 ---
 Je bent nog steeds op een verjaardagsfeestje en het [eerste stukje taart](./breuken/) ($\frac{1}{8}$) is op. 🍰 Blijkbaar is er nog een <Mute text="(even grote)"/> taart voor zij die willen. Jij en vijf anderen lusten wel nog een stukje. 😋 Deze taart wordt dus in zes gelijke delen verdeeld en jij krijgt hier één stukje van. Hoeveel taart heb je dan in het totaal gegeten? 
 
