--- a/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
@@ -6,7 +6,7 @@ draft: false
 categories: ["wiskunde", "getallen", "1e middelbaar"]
 tags: ["Optellen", "Aftrekken", "Vermenigvuldigen", "Delen", "Rekenen", "Bewerkingen"]
 description: "Deze les is een korte herhaling van de basisbewerkingen: optellen, aftrekken, vermenigvuldigen en delen. We bekijken aan de hand van voorbeelden nog eens snel hoe dit precies werkt."
-images: ['/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/optelling.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/aftrekking.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/vermenigvuldiging.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/deling.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/optelling_met_negatieve_getallen.png']
+image: ./img/optelling.png
 ---
 
 Alvorens we in de rationale getallen duiken, frissen we graag nog eerst even de
