--- a/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
@@ -2,10 +2,7 @@
 title: "Vierkantswortels van breuken en kommagetallen"
 date: 2020-06-20T12:00:00+02:00
 weight: 6
-draft: false
-wiski: ""
-categories: ["wiskunde", "getallen", "1e middelbaar"]
-images: []
+image: ./img/vierkantswortel_terminologie.png
 tags: ["Vierkantswortels", "Rekenen", "Bewerkingen", "Breuken", "Kommagetallen", "Rationale getallen"]
 description: "In deze les herhalen we wat een vierkantswortel precies is en leren we de vierkantswortel te nemen van breuken en kommagetallen."
 ---
