--- a/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
@@ -7,7 +7,7 @@ images: []
 title_img: ""
 ---
 
-Wanneer een veelterm [variabelen](variabelen) bevat, geeft de veelterm enkel een **beschrijving van een berekening**. De veelterm zegt enkel **hoe** je een uitkomst kan berekenen. Wanneer we echter de **variabelen vervangen** door getallen, kan de veelterm ook gelijk worden aan een getal. Dat getal noemen we een **getalwaarde van de veelterm**. In deze les leren we hoe we zo een getalwaarde kunnen berekenen.
+Wanneer een veelterm [variabelen](../eentermen/variabelen) bevat, geeft de veelterm enkel een **beschrijving van een berekening**. De veelterm zegt enkel **hoe** je een uitkomst kan berekenen. Wanneer we echter de **variabelen vervangen** door getallen, kan de veelterm ook gelijk worden aan een getal. Dat getal noemen we een **getalwaarde van de veelterm**. In deze les leren we hoe we zo een getalwaarde kunnen berekenen.
 
 ## De getalwaarde berekenen
 
