--- a/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
@@ -54,8 +54,8 @@ dezelfde vorm als $(a \atten{-} b)^2$.
 Ook $102^2$ kunnen we als merkwaardig product schrijven als $(100 + 2)^2$. Die
 is dus van de vorm $(a \atten{+} b)^2$.
 
-We zullen merkwaardige producten vaak tegenkomen bij onder andere [ontbinden in
-factoren](/lessen/wiskunde/veeltermen/ontbinden) en
+We zullen merkwaardige producten vaak tegenkomen bij onder andere ontbinden in
+factoren en
 [functies](/lessen/wiskunde/functies) (meer bepaald veeltermfuncties).
 Hieronder bespreken we hoe je een merkwaardig product kan uitrekenen.
 
