--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -42,16 +42,16 @@ veelterm gaan vereenvoudigen, werken we eerst alle haakjes uit.
 De uitdrukking die tussen haakjes staat, kan zelf een eenterm of een veelterm
 zijn. Bijvoorbeeld:
 
--   In de veelterm 
+- In de veelterm 
 $$
 -ab^2 + 3(b^3c^2)
 $$
- staat er een **eenterm tussen haakjes**
--   In de veelterm 
+staat er een **eenterm** tussen haakjes.
+- In de veelterm
 $$
-- 5(x^3 + 2x^2) + 3x^2
+{- 5(x^3 + 2x^2) + 3x^2}
 $$
- staat er een **veelterm tussen haakjes**
+staat er een **veelterm** tussen haakjes.
 
 Wanneer de **uitdrukking tussen haakjes een eenterm** is, mag je de **haakjes
 gewoon weglaten**. Dat mag omdat de vermenigvuldiging in $\mathbb{R}$
@@ -125,7 +125,7 @@ al meteen te rangschikken, zullen we in de volgende stap heel eenvoudig de
 gelijksoortige eentermen kunnen vinden.
 
 > Als je niet meer goed weet hoe je een eenterm vereenvoudigt, lees je best
-> onze les over het [vereenvoudigen van eentermen](vereenvoudig_eenterm)
+> onze les over het [vereenvoudigen van eentermen](../eentermen/vereenvoudigen)
 > eens na. Enkele voorbeelden:
 
 - Vb. 1:
