--- a/src/content/lessen/wiskunde/meetkunde_1/_index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/_index.mdx
@@ -7,5 +7,5 @@ section_color: "#ff6300"
 level: "1e middelbaar"
 course: "wiskunde"
 topic: "meetkunde"
-images: []
+image: ./figuren/img/2d_3d.png
 ---
