--- a/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
@@ -5,6 +5,7 @@ weight: 1
 draft: true
 description: "In deze les overlopen we enkele basisbegrippen in de meetkunde, zoals punten, lijnen, vlakken, rechten... We bekijken wat ze betekenen, hoe we ze kunnen gebruiken en ook enkele eigenschappen en definities komen aan bod."
 tags: ["Meetkundige begrippen", "Rechten", "Vlakken"]
+image: ./img/halfrechte.png
 ---
 Vooraleer we de wondere wereld van de meetkunde <Mute text="of geometrie"/> kunnen betreden 🗝️, moeten we enkele basisbegrippen kennen. Op deze kennis kunnen we vervolgens voortbouwen om de vormen en figuren die we tegenkomen wiskundig te beschrijven.
 
