--- a/src/content/lessen/wiskunde/meetkunde_1/cirkels/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/cirkels/index.mdx
@@ -5,7 +5,7 @@ weight: 7
 draft: true
 description: "In deze les gaan we dieper in op de cirkel. We leren over de straal, diameter, middelpunt en zaken zoals een koorde, middellijn en middelpuntshoek. We nemen ook een snelle kijk op de symmetrie van een cirkel."
 tags: ["Vlakke figuren", "Cirkels", "Meetkundige eigenschappen"]
-images: []
+image: ./img/cirkel.png
 ---
 Wanneer er een straatartiest een mooi nummer speelt 🎷, gaan de mensen spontaan in een cirkel staan. Ook DVD's, wielen of graancirkels zijn voorbeelden van een **cirkel**. 👽
 
