--- a/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
@@ -5,7 +5,7 @@ weight: 5
 draft: true
 description: "Driehoeken zijn speciale vlakke figuren. Vervolgens leren we ook over de merkwaardige lijnen in een driehoek. Ten slotte ontdekken we de eigenschappen van een driehoek en leren we ze classificeren." 
 tags: ["Vlakke figuren", "Driehoeken", "Meetkundige eigenschappen", "Tekenen met geodriehoek"]
-images: []
+image: ./img/driehoek.png
 ---
 **Driehoeken** vinden we overal rondom ons! 🌍 Ingenieurs gebruiken ze ook vaak omdat het zeer **stevige en stabiele figuren** zijn om te gebruiken in de bouw. 🏗️🚧
 
