--- a/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
@@ -5,7 +5,7 @@ weight: 4
 draft: true
 description: "In deze les gaan we verder in op de driedimensionale ruimte. We bekijken het verschil tussen vlakke figuren en ruimtefiguren. Denk hierbij aan vierkanten, kubussen, cirkels, cilinders, driehoeken, prisma's... Daarnaast bekijken we ook enkele eigenschappen die alleen gelden in de ruimte (zoals kruisende rechten). Ten slotte komen perspectieven en ontwikkelingen van ruimtefiguren ook kort aan bod."
 tags: ["Vlakke figuren", "Ruimtefiguren", "Meetkundige eigenschappen"]
-images: []
+image: ./img/2d_3d.png
 ---
 Tot nu toe hebben we het vooral over vlakke meetkunde gehad. Meetkunde die zich afspeelt op een blaadje papier. 📝 Maar wij leven niet in een vlakke wereld, wij leven in een wereld vol diepte. Wij leven in een **driedimensionele wereld**. 🌱🐘🧍
 
