--- a/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
@@ -5,7 +5,7 @@ weight: 3
 draft: true
 description: "In deze les gaan we verder in op hoeken. We bekijken nog eens wat een hoek precies is en we bekijken enkele bijzondere hoeken waarna we leren over de bissectrice of deellijn."
 tags: ["Meetkundige begrippen", "Hoeken"]
-images: []
+image: ./img/hoeken_terminologie.png
 ---
 Wanneer twee lijnen elkaar snijden, dan doen ze dit onder een bepaalde **hoek**. Hoeken zijn belangrijk in alles wat met meetkunde te maken heeft, want ze vertellen iets over **de manier waarop** twee rechten, halfrechten of lijnstukken elkaar **snijden**. Daarnaast komen hoeken ook voor bij **draaiingen** 🥴, dus hou je goed vast!
 
