--- a/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
@@ -5,7 +5,7 @@ weight: 9
 draft: true
 description: "In deze les leren we de oppervlakte berekenen van driehoeken, vierhoeken, cirkels en ruimtefiguren zoals kubussen, balken..." 
 tags: ["Metend rekenen", "Vlakke figuren", "Ruimtefiguren", "Oppervlakte", "Vierhoeken", "Cirkel", "Driehoeken",]
-images: []
+image: ./img/oppervlaktes.png
 ---
 Als er een virus door de wereld raast 🦠, moeten we best anderhalve meter afstand houden. Wanneer we dus toch naar een concert gaan in een concertgebouw 🎵, dan heeft iedere persoon een **oppervlakte** van $2.25 \si{ m}^2$ nodig. Alleen zo krijgt het virus geen kans. 💪
 
