--- a/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
@@ -5,7 +5,7 @@ weight: 2
 draft: true
 description: "In deze les gaan we verder in op rechten. We bekijken nog eens wat een rechte precies is en gaan vervolgens in op enkele belangrijke eigenschappen van deze rechten. Denk hierbij aan de onderlinge ligging, loodrechte stand, middelloodlijn... We leren ook hoe we de afstand tussen een punt en een rechte kunnen berekenen."
 tags: ["Meetkundige begrippen", "Rechte", "Meetkundige eigenschappen", "Afstanden berekenen"]
-images: []
+image: ./img/rechte.png
 ---
 Overal rondom ons zien we **lijnen of rechten**. Sommige snijden elkaar niet en andere wel. In deze les bekijken we de rechten door een wiskundige bril! 🤓
 
