--- a/src/content/lessen/wiskunde/meetkunde_1/vierhoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/vierhoeken/index.mdx
@@ -5,7 +5,7 @@ weight: 6
 draft: true
 description: "Niet alle vierhoeken zijn vierkanten. We leren ze classificeren en maken onderscheid tussen vierkanten, parallellogrammen, trapezia, ruiten en rechthoeken. We leren ze piekfijn definieren en bekijken enkele eigenschappen." 
 tags: ["Meetkundige begrippen", "Vlakke figuren", "Vierhoeken", "Meetkundige eigenschappen"]
-images: []
+image: ./img/vierhoeken.png
 ---
 Vierkanten, rechthoeken, ruiten, trapezia en parallellogrammen zijn allemaal voorbeelden van **vierhoeken**, maar waarin verschillen ze? 🧐
 
