--- a/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
+++ b/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
@@ -135,7 +135,7 @@ $\green{y} = \green{0{,}64}$. We kunnen ook eens een andere x-waarde
 uitproberen, bijvoorbeeld $\orange{x} = \orange{3}$. Probeer die zelf eens in
 te vullen, je zou $\green{y} = \green{0{,}78}$ moeten krijgen.
 
-Het kan verwarrend zijn om al die "$\green{y} = $" te zien staan. De ene keer
+Het kan verwarrend zijn om al die "$\green{y} =~$" te zien staan. De ene keer
 keer is $\green{y} = \green{0{,}64}$, de andere keer is $\green{y} =
 \green{0{,}78}$! Waar is $\green{y}$ nu eigenlijk aan gelijk?! 🤯 Het
 probleem zit hem in de notatie. Met die verschillende $\green{y}$'s bedoelen we
@@ -162,7 +162,7 @@ Een andere veelgebruikte notatie is om "$f(\ldots)$" te schrijven in plaats van
 -   $\green{f(3)} = \green{0{,}78}$
 
 Wat doen we met het functievoorschrift? Die begint namelijk ook met "$\green{y}
-= $". Wel, die schrijven we zelf als $\green{y(x)}$ of $\green{f(x)}$. Zo geven
+=~$". Wel, die schrijven we zelf als $\green{y(x)}$ of $\green{f(x)}$. Zo geven
 we aan dat we eigenlijk nog niets hebben ingevuld in het voorschrift <Mute
 text="(of anders gezegd dat we letterlijk $x$ hebben ingevuld)" />.
 
@@ -201,14 +201,11 @@ naast een minteken staat... 🤨
 
 ## Samengevat
 
-<Attention>
-
-Wat is een functievoorschrift?
-
+<Attention title="Wat is een functievoorschrift?">
 
 Een functievoorschrift bestaat uit 2 stukken:
 
-1. **Links** staat er $\green{y} = $ **of** $\green{f(x)} = $
+1. **Links** staat er $\green{y} =~$ **of** $\green{f(x)} =~$
 2. **Rechts** staat er een berekening met $\orange{x}$
 
 Het functievoorschrift zegt ons **hoe we de functiewaarde moeten berekenen van
