--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -2,20 +2,7 @@
 title: "Link met functies"
 date: 2019-01-09T18:17:33+01:00
 weight: 4
-draft: false
 tags: []
-categories: []
-level: ""
-course: ""
-topic: ""
-images:
-    [
-        "/lessen/wiskunde/1g_vgl/functies/plt/snijpunt.png",
-        "/lessen/wiskunde/1g_vgl/functies/img/conveyor_snijpunt_1.png",
-        "/lessen/wiskunde/1g_vgl/functies/img/conveyor_functiewaarde.png",
-        "/lessen/wiskunde/1g_vgl/functies/img/conveyor_nulpunt_1.png",
-        "/lessen/wiskunde/1g_vgl/functies/plt/nulpunt.png",
-    ]
 image: plt/snijpunt.png
 ---
 
@@ -60,7 +47,7 @@ $$
 $$
 
 En **poef** ✨🧙! We krijgen een **vergelijking**. Als we deze [vergelijking
-oplossen](eerste_graad), vinden we de $x-$coördinaat van het snijpunt van
+oplossen](oplossen), vinden we de $x-$coördinaat van het snijpunt van
 $\green{f}$ en $\blue{g}$:
 
 $$
