--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -2,15 +2,8 @@
 title: "Hoe oplossen?"
 date: 2019-01-10T18:10:30+01:00
 weight: 3
-draft: false
 wiski: "http://wiski.be/oefenen/eerstegraadsvergelijkingen/take"
 tags: ["vergelijkingen", "algebra"]
-categories: ["wiskunde", "algebra"]
-level: "2M"
-course: "wiskunde"
-topic: "algebra"
-images: []
-title_img: ""
 ---
 
 Een [vergelijking](intro) van de eerste graad in één onbekende $x$ is een vergelijking
@@ -50,7 +43,7 @@ De drie stappen zijn:
 
 1. **Schoonmaakwerk**: vereenvoudig het linker- en rechterlid zodat er langs
    beide kanten iets staat van de vorm $a x + b$
-   <Mute>(met $a, b \in \mathbb{R}$)</Mute>;
+   (met $a, b \in \mathbb{R}$);
 2. **Alle $x$-en naar links**: vorm de vergelijking om zodat enkel het
    linkerlid nog $x$-en bevat;
 3. **Alle getallen naar rechts**: vorm de vergelijking om zodat alle getallen in
