--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -169,7 +169,7 @@ $$
 
 De volgende stap is om de [coëfficiënt](eenterm/#coëfficiënt-en-lettergedeelte), of het
 _cijfergedeelte_, van de eenterm uit te rekenen. Daarvoor mag je in gedachte alle
-[variabelen](variabele) even weglaten. Vervolgens reken je de bewerking die
+[variabelen](variabelen) even weglaten. Vervolgens reken je de bewerking die
 er staat gewoon uit:
 
 
