Update krachten_1 intro frontmatters

--- a/src/content/lessen/fysica/krachten_1/_index.mdx
+++ b/src/content/lessen/fysica/krachten_1/_index.mdx
@@ -2,14 +2,10 @@
 title: "Krachten"
 date: 2019-05-24T10:46:07+02:00
 weight: 3
-draft: false
-tags: []
-categories: []
+tags: ["kracht", "Newton"]
 level: "3e middelbaar"
 course: "fysica"
 topic: "dynamica"
-section_color: "#19a974"
-images: []
 image: intro/img/kracht_effecten.png
 ---
 
