--- a/src/content/lessen/fysica/krachten_1/intro/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/intro/index.mdx
@@ -2,23 +2,9 @@
 title: "Wat is een kracht?"
 date: 2019-05-24T11:00:42+02:00
 weight: 1
-draft: false
-tags: []
-categories: []
-level: ""
-course: ""
-topic: ""
-images:
-    [
-        "/lessen/fysica/krachten_1/intro/img/kracht_effecten.png",
-        "/lessen/fysica/krachten_1/intro/img/krachten_voorbeelden.png",
-        "/lessen/fysica/krachten_1/intro/img/evian_kracht.png",
-        "/lessen/fysica/krachten_1/intro/img/veldkrachten.png",
-        "/lessen/fysica/krachten_1/intro/img/zwaartekrachtsveld.png",
-        "/lessen/fysica/krachten_1/intro/img/contactkrachten.png",
-        "/lessen/fysica/krachten_1/intro/img/puntmassa.png",
-    ]
+tags: ["kracht", "Newton", "statisch effect", "dynamisch effect", "veldkracht", "contactkracht"]
 image: img/kracht_effecten.png
+description: "In deze les introduceren we de grootheid kracht, met als eenheid de newton. We bespreken het statisch en dynamisch effect dat krachten kunnen hebben en vertellen over veld- en contactkrachten."
 ---
 
 Een van de meest fundamentele [grootheden](../grootheden_eenheden/intro) in de
